--- a/res/layout/fragment_info.xml
+++ b/res/layout/fragment_info.xml
@@ -195,5 +195,14 @@
         android:layout_marginRight="30dp"
         android:text="@string/str_butDisconnect" />
  -->
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/LampTime"
+        android:layout_marginRight="30dp"
+        android:text="TextView" />
  
 </RelativeLayout>
